[gd_scene load_steps=6 format=3 uid="uid://ci8txoos1csur"]

[ext_resource type="Script" uid="uid://c8n3b43o0ecm7" path="res://Scripts/pour_minigame.gd" id="1_yvvkv"]
[ext_resource type="Texture2D" uid="uid://r3xi7cx3t8al" path="res://Sprites/Tools/JiggerSide.png" id="2_yvvkv"]
[ext_resource type="Script" uid="uid://cjsahik1c2rk0" path="res://Scripts/bottlepour.gd" id="3_quc38"]
[ext_resource type="Texture2D" uid="uid://31sxqk03waj8" path="res://Sprites/Bottles/WhiskeySide.png" id="4_3hi6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75yu4"]
size = Vector2(456.514, 179.011)

[node name="PourMinigame" type="Node2D"]
script = ExtResource("1_yvvkv")

[node name="PopupPanel" type="ColorRect" parent="."]
clip_contents = true
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
pivot_offset = Vector2(400, 300)
mouse_filter = 2
color = Color(0.82891, 0.82891, 0.82891, 1)

[node name="MinigameContent" type="Node2D" parent="PopupPanel"]
position = Vector2(400, 300)

[node name="Jigger Minigame" type="Node2D" parent="PopupPanel/MinigameContent"]
position = Vector2(-180, 160)

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/MinigameContent/Jigger Minigame"]
position = Vector2(-1, -0.999985)
scale = Vector2(0.7, 0.6)
texture = ExtResource("2_yvvkv")

[node name="Bottle Minigame" type="Area2D" parent="PopupPanel/MinigameContent"]
position = Vector2(-146, -57)
rotation = 0.261799
script = ExtResource("3_quc38")

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/MinigameContent/Bottle Minigame"]
position = Vector2(1, 2.98028e-08)
rotation = -1.5708
texture = ExtResource("4_3hi6e")
centered = false
offset = Vector2(-100, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PopupPanel/MinigameContent/Bottle Minigame"]
position = Vector2(255.751, -12.131)
shape = SubResource("RectangleShape2D_75yu4")

[node name="FillMeter" type="ProgressBar" parent="PopupPanel"]
layout_mode = 0
offset_left = 52.0
offset_top = 45.0
offset_right = 98.0
offset_bottom = 552.0
step = 0.001
fill_mode = 3
